# smolvm

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  sync-upstream.yml
crates/smolvm-agent/: Cargo.toml
crates/smolvm-agent/src/: container.rs  crun.rs  main.rs  oci.rs  paths.rs  process.rs  storage.rs  vsock.rs
crates/smolvm-pack/: Cargo.toml
crates/smolvm-pack/src/: assets.rs  format.rs  lib.rs  macho.rs  packer.rs  signing.rs
crates/smolvm-protocol/: Cargo.toml
crates/smolvm-protocol/src/: lib.rs
crates/smolvm-stub/: Cargo.toml  build.rs
crates/smolvm-stub/src/: extract.rs  launch.rs  section.rs
lib/linux-x86_64/: libkrunfw.so.5
scripts/: build-agent-rootfs.sh  build-dist.sh  install-local.sh  install.sh  rebuild-agent.sh  smoke-test-pack.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  mount.rs  network.rs  process.rs  protocol.rs  storage.rs  util.rs
src/agent/: client.rs  launcher.rs  launcher_dynamic.rs  manager.rs  mod.rs  terminal.rs
src/api/: error.rs  mod.rs  state.rs  supervisor.rs  types.rs
src/api/handlers/: containers.rs  exec.rs  health.rs  (+4 more)
src/cli/: agent.rs  container.rs  create.rs  delete.rs  exec.rs  list.rs  microvm.rs  mod.rs  openapi.rs  pack.rs  pack_run.rs  run.rs  run_packed.rs  runpack.rs  sandbox.rs  serve.rs  smolfile.rs  start.rs  stop.rs  vm_common.rs
src/platform/: macos.rs
src/rootfs/: mod.rs
src/vm/: config.rs  mod.rs  state.rs
tests/: README.md  common.sh  integration_test.sh  run_all.sh  test_api.sh  test_cli.sh  test_microvm.sh  test_pack.sh  test_sandbox.sh
(+2 files in other folders)
