[package]
name = "smolvm-protocol"
version = "0.1.7"
edition = "2021"
description = "Protocol types for smolvm host-guest communication"
license = "MIT OR Apache-2.0"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
